  * Optimize cache/midinfo parsing a bit.
  * Extend server penalization so that any server that disconnects before successfully executing at least one command will be penalized.  This means that disconnects due to overquota, servers that connect but timeout before saying hello, etc, will also be penalized now.
  * Fix needing to escape quotes inside -r strings.

2002-06-17 v0.19.1:
  * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
  * Fix configure script not resetting a variable between testing packages causing it to not run some tests and to miss placing some data in the Makefile.
  * Add --with-*-prefix configure args, remove multi-location testing of --with-* since autoconf's caching killed it anyway.
  * Rearrange CPPFLAGS order to ensure that when using included uulib, its header is found before others that may exist on system.

2002-06-17 v0.19:
  * Fix handling of timeout where the server prints an error before disconnecting. (Reported by Scott Kay)
  * Fix specifying some default arguments twice. (Fixes gcc 3.1 compile)
  * Make all STL includes use the new method. (Fixes warnings under gcc 3.1)
  * Fix error on writing temp file sometimes leaving the broken temp file rather than deleting it.
  * Fix restoring of previous group upon completion of -@.
  * Reset to previous startpath when -@ completes, not to previous -p.
  * Improved skipping of command line args when bad parameters are given. (Eg, now nget -p bad -r foo -p good -r bar will still execute the -p good -r bar part, rather than exiting on the first error.)
  * Added GROUP error exit status (code 16) for when all servers fail to update a group's headers. (Previously gave an OTHER error.)
  * Search the cache for all adjacent -r/-R options in a single loop.  (Speeds up command lines like nget -Gfoo -r bar -r baz -r boo. (options -h/-G/-g/-@ split -r chains.))