@@ -1,6 +1,6 @@
 nget Copyright 1999-2002 Matthew Mueller <donut@azstarnet.com>
 
-Readme for nget win32 (cygwin) build.
+Readme for nget win32 build.
 
 Some env vars must be set:
 
