@@ -9,6 +9,7 @@
   * Optimize cache/midinfo parsing a bit.
   * Extend server penalization so that any server that disconnects before successfully executing at least one command will be penalized.  This means that disconnects due to overquota, servers that connect but timeout before saying hello, etc, will also be penalized now.
   * Fix needing to escape quotes inside -r strings.
+  * Preliminary support for (cross-)compiling with mingw32. (see README.mingw32)
 
 2002-06-17 v0.19.1:
   * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
